tests/EtaX/EtaX.prop/EtaX.prop.05.check
// src:   val t2f: Any       = prop _                 // ok
// 2.13-base warn 
target/tests/EtaX/EtaX.prop/EtaX.prop.05.scala:11: warning: Methods without a parameter list and by-name params can no longer be converted to functions as `m _`, write a function literal `() => m` instead
  val t2f: Any       = prop _                 // ok
                       ^
1 warning

// 2.13-head warn  <no change>
// 2.13-new  error
target/tests/EtaX/EtaX.prop/EtaX.prop.05.scala:11: error: Methods without a parameter list and by-name params can not be converted to functions as `m _`, write a function literal `() => m` instead
  val t2f: Any       = prop _                 // ok
                       ^
1 error

// 3.0-old   error
-- [E099] Syntax Error: target/tests/EtaX/EtaX.prop/EtaX.prop.05.scala:11:28 ---
11 |  val t2f: Any       = prop _                 // ok
   |                       ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found

// 3.0       error <no change>
// 3.1-migr  error <no change>
// 3.1       error <no change>

warn  warn  error error error error error
